@@ -6,11 +6,12 @@
 
 \description{Convert an integer time to a POSIXct time}
 
-\usage{number.as.POSIXct(t, type=c("unix"), tz="UTC")}
+\usage{number.as.POSIXct(t, type=c("unix", "matlab"), tz="UTC")}
 
 \arguments{
 
-    \item{t}{an integer corresponding to a time (see \dQuote{Details}).}
+    \item{t}{an integer corresponding to a time, in a way that depends on
+        \code{type} (see \dQuote{Details}).}
 
     \item{type}{the type of time (see \dQuote{Details}).}
 
@@ -18,16 +19,23 @@
 
 }
 
-\details{Only one \code{type} is permitted in the present version of the
-    function, namely \code{"unix"}, and the definition of \code{t} in that case
-    is the number of seconds since the start of January 1, 1970 (i.e. since
-    midnight on the last day of 1969).
-}
-
-\value{A POSIXct time.}
+\details{Unix times, indicated by \code{type="unix"}, are measured in seconds
+    since the start of the year 1970.  Matlab times, indicated by
+    \code{type="matlab"}, are measured in years since the start of the year
+    1899.  
+    
+    The starting point of time systems is a common source of confusion; for
+    example, some would say that Matlab time starts in the year 1900, but that
+    it starts at 1, not at 0.  Some light is cast on such issues in the
+    \dQuote{Examples} section.)
+    
+    }
+    
+\value{A \code{\link{POSIXct}} time.}
 
 \examples{
-cat("Unix times start at ", number.as.POSIXct(0), "\n")
+cat("In Unix, time=0 (seconds) means ", format(number.as.POSIXct(0)), "\n")
+cat("In Matlab, time=1 (days) means ", format(number.as.POSIXct(1, type="matlab")), "\n")
 }
 
 \author{Dan Kelley}
